<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="com.randolltest.facerecognition.ui.manage.ManageFragment.ClickProxy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{()->click.pop()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_manage_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_manage_title"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/tv_manage_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/value_manage_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:onClick="@{()->click.register()}"
            android:text="@string/value_bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_manage_title" />

        <Button
            android:id="@+id/bt_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/value_bt_records"
            app:layout_constraintEnd_toEndOf="@id/bt_register"
            app:layout_constraintStart_toStartOf="@id/bt_register"
            app:layout_constraintTop_toBottomOf="@id/bt_register" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/value_bt_clear"
            app:layout_constraintEnd_toEndOf="@id/bt_register"
            app:layout_constraintStart_toStartOf="@id/bt_register"
            app:layout_constraintTop_toBottomOf="@id/bt_records" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>